# RxDatabindings

./: .bazelrc  .gitignore  CHANGELOG.md  README.md  RELEASING.md  WORKSPACE  build.gradle  gradle.properties
.github/workflows/: android.yml
app/: build.gradle
app/src/androidTest/java/com/stepango/example/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/stepango/rxdatabindings/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/stepango/example/: MainActivity.kt
app/src/main/java/com/stepango/rxdatabindings/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: BUILD.bazel  build.gradle  proguard-rules.pro
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/stepango/example/: DataBindingOptionalExt.kt  DatabindingsExt.kt
lib/src/main/java/com/stepango/rxdatabindings/: DataBindingOptionalExt.kt  DataBindingScheduler.kt  DatabindingsExt.kt  FlowableExt.kt  Math.kt  MaybeExt.kt  ObservableExt.kt  ObservableNumber.kt  ObservableSpannableString.kt  ObservableSpanned.kt  ObservableString.kt  Optional.kt  SingleExt.kt
lib/src/test/java/com/stepango/example/: ExampleUnitTest.java
lib/src/test/java/com/stepango/rxdatabindings/: ExampleUnitTest.java
lib/src/test/java/com/stepango/test/: NullStringGetter.java  ObservableStringTest.kt
